--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,11 @@ guava=33.1.0-jre
 jmh=1.37
 asm=9.7
 glassfishJson=2.0.1
+jsr305=3.0.2
+redisson=3.31.0
+
+jetty=12.0.11
+jettyServlet=11.0.20
+freemarker=2.3.32
+
+reflections=0.10.2
