--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.parallel=true
 # -------Plugins---------
 jgitver=0.10.0-rc03
 dependencyManagement=1.1.5
-springframeworkBoot=3.3.1
+springframeworkBoot=3.2.0
 johnrengelmanShadow=8.1.1
 jib=3.4.1
 protobufVer=0.8.18
@@ -36,8 +36,8 @@ grpc=1.64.0
 errorProneAnnotations=2.11.0
 tomcatAnnotationsApi=6.0.53
 
-
-
+wiremock=3.0.1
+r2dbcPostgresql=0.8.13.RELEASE
 
 
 
